<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="switch_theme">Темная тема</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="play_lists">Плейлисты</string>
    <string name="favourites">Избранные треки</string>
</resources>