<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padLeft"
            android:paddingTop="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/search_but"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:height="0dp"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:cornerRadius="@dimen/radiusButton"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/media_but"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:height="0dp"
            android:backgroundTint="@color/white"
            android:text="@string/media"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeButton"
            app:cornerRadius="@dimen/radiusButton"
            app:icon="@drawable/media"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/settings_but"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:height="0dp"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeButton"
            app:cornerRadius="@dimen/radiusButton"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/iconPadding"
            app:iconTint="@color/black"
            android:textAllCaps="false"/>
    </LinearLayout>

</LinearLayout>