<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"
        android:paddingTop="14dp"
        android:paddingBottom="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            android:contentDescription="@drawable/back"
            android:padding="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="@dimen/title" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        android:padding="21dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/switch_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/textSize"
            android:layout_weight="1"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="35dp"
            android:minHeight="35dp"
            tools:ignore="RtlSymmetry,UseSwitchCompatOrMaterialXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"
        android:padding="21dp"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:contentDescription="@drawable/share"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:padding="21dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/write_support"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            android:contentDescription="@drawable/support"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        tools:ignore="UseCompoundDrawables"
        android:padding="21dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textSize="@dimen/textSize"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/next"
            android:contentDescription="@drawable/next"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>
